--- a/source/index.html
+++ b/source/index.html
@@ -149,7 +149,7 @@
               </li>
             </ul>
           </fieldset>
-          <button class="btn btn-seafoam-blue btn__modal-form" type="submit">Добавить</button>
+          <button class="btn btn-blue btn__modal-form" type="submit">Добавить</button>
         </form>
     </section>
   </body>
