--- a/source/form.html
+++ b/source/form.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,500,700;subset=cyrillic-ext" rel="stylesheet">
     <title>HTML Academy: Мишка | Учебный проект </title>
   </head>
   <body>
     <header class="page-header">
-      <a href="#" class="page-header__logo">
+      <a href="index.html" class="page-header__logo">
         <img src="http://placehold.it/86x35" alt="Логотип магазина'Мишка'" class="page-header__logo-image" width="86" height="35">
       </a>
       <nav class="main-nav">
@@ -25,10 +24,10 @@
       </nav>
     </header>
     <main class="main-form">
+      <div class="page-top page-top--catalog">
+        <h1 class="heading heading--primary">Вязание на заказ</h1>
+      </div>
       <section class="form">
-        <header class="header-form">
-          <h1 class="heading-primary">Вязание на заказ</h1>
-        </header>
         <div class="container">
           <p class="form__text">
             Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
@@ -133,7 +132,7 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-          <h3 class="header-tritary"><span class="visually-hidden">Социальные сети</span></h3>
+          <h3 class="heading heading--tertialy"><span class="visually-hidden">Социальные сети</span></h3>
           <ul class="social-list">
             <li class="social-list__item">
               <a class="social-list__link social-list__link--instagram" href="#"><span class="visually-hidden">Мишка в Инстаграме</span></a>
