--- a/source/index.html
+++ b/source/index.html
@@ -242,6 +242,6 @@
         <button class="btn btn--blue modal-form__btn" type="submit">Добавить</button>
       </form>
     </section>
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
