M5 T1 jsmenu_catalog.html

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="page-header">
-      <nav class="main-nav main-nav--mobile-closed main-nav--mobile-opened main-nav--mobile-nojs">
+      <nav class="main-nav main-nav--mobile-closed main-nav--mobile-nojs">
         <a href="index.html" class="main-nav__logo">
           <picture class="logo__image">
             <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
