--- a/source/index.html
+++ b/source/index.html
@@ -95,9 +95,9 @@
             </div>
             <div class="favorites__pic">
               <picture class="favorites__picture">
-                <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg">
-                <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg">
-                  <img src="img/triple-set-mobile@1x.jpg" alt="Товар Недели" class="favorites__pic-img">
+                <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
+                  <img src="img/triple-set-mobile@1x.jpg 1x, img/triple-set-mobile@2x.jpg 2x " alt="Товар Недели" class="favorites__pic-img">
               </picture>
             </div>
             <span class="favorites__price">Цена: 990 руб.</span>
@@ -148,9 +148,9 @@
         </div>
         <div class="contacts__map" id="contactsMap">
           <picture class="cantacts__picture-map--safe">
-            <source media="(min-width: 1150px)" srcset="img/map-desktop@1x.jpg">
-            <source media="(min-width: 768px)" srcset="img/map-tablet@1x.jpg">
-            <img class="cantacts__picture-img" src="img/map-mobile@1x.jpg" height="457" alt="Карта - Магазин Мишка">
+            <source media="(min-width: 1150px)" srcset="img/map-desktop@1x.jpg 1x, img/map-desktop@2x.jpg 2x ">
+            <source media="(min-width: 768px)" srcset="img/map-tablet@1x.jpg, img/map-tablet@2x.jpg 2x">
+            <img class="cantacts__picture-img" src="img/map-mobile@1x.jpg 1x, img/map-mobile@2x.jpg 2x " height="457" alt="Карта - Магазин Мишка">
           </picture>
         </div>
         <div class="contacts__container">
