--- a/source/catalog.html
+++ b/source/catalog.html
@@ -56,7 +56,7 @@
                 <picture>
                   <source media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.jpg 1x, img/photo-hare-desktop@2x.jpg 2x ">
                   <source media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.jpg 1x, img/photo-hare-tablet@2x.jpg 2x ">
-                  <img src="img/photo-hare-mobile@1x.jpg 1x, img/photo-hare-mobile@2x.jpg 2x" alt="Зайчик-попрыгайчик" class="product-card__img">
+                  <img src="img/photo-hare-mobile@1x.jpg", srcset="img/photo-hare-mobile@2x.jpg 2x" alt="Зайчик-попрыгайчик" class="product-card__img">
                 </picture>
               </a>
               <div class="product-card__spec">
@@ -79,9 +79,9 @@
               <article class="product-card">
                 <a href="#" class="product-card__link">
                   <picture>
-                      <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x ">
-                      <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x ">
-                      <img class="product-card__img" src="img/photo-bowl-mobile@1x.jpg 1x, img/photo-bowl-mobile@2x.jpg 2x " alt="Корзинка для белья" class="product-card__img">
+                      <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
+                      <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
+                      <img class="product-card__img" src="img/photo-bowl-mobile@1x.jpg", srcset="img/photo-bowl-mobile@2x.jpg 2x" alt="Корзинка для белья" class="product-card__img">
                     </picture>
                 </a>
                 <div class="product-card__spec">
@@ -100,9 +100,9 @@
             <article class="product-card">
               <a href="#" class="product-card__link">
                 <picture>
-                  <source media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x ">
-                  <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x ">
-                  <img class="product-card__img" src="img/photo-toys-mobile@1x.jpg 1x, img/photo-toys-mobile@2x.jpg 2x " alt="Большая корзинка для игрушек" class="product-card__img">
+                  <source media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x">
+                  <img class="product-card__img" src="img/photo-toys-mobile@1x.jpg", srcset="img/photo-toys-mobile@2x.jpg 2x" alt="Большая корзинка для игрушек" class="product-card__img">
                 </picture>
               </a>
               <div class="product-card__spec">
@@ -123,9 +123,9 @@
           <div class="production__video">
             <a href="#" class="production__video--play"><span class="visually-hidden">Проиграть видео</span></a>
             <picture>
-                <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x,img/video-desktop@2x.jpg 2x ">
-                <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@1x.jpg 2x ">
-                <img src="img/video-mobile@1x.jpg 1x, img/video-mobile@2x.jpg 2x " alt="Видео - производство" class="production__video--img">
+                <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x,img/video-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+                <img src="img/video-mobile@1x.jpg", srcset="img/video-mobile@2x.jpg 2x" alt="Видео - производство" class="production__video--img">
             </picture>
           </div>
           <div class="production__text">
