--- a/source/form.html
+++ b/source/form.html
@@ -164,21 +164,21 @@
         <ul class="social-list">
           <li class="social-list__item">
             <a class="social-list__link social-list__link--instagram" href="#"><span class="visually-hidden">Мишка в Инстаграме</span>
-              <svg width="21.769" height="21.334">
+              <svg width="23.494" height="20.168">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-insta"/>
               </svg>
             </a>
           </li>
           <li class="social-list__item">
             <a class="social-list__link social-list__link--facebook" href="#"><span class="visually-hidden">Мишка в Фейсбуке</span>
-              <svg width="21.769" height="21.334">
+              <svg width="14.962" height="27.718">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-fb"/>
               </svg>
             </a>
           </li>
           <li class="social-list__item">
             <a class="social-list__link social-list__link--twitter" href="#"><span class="visually-hidden">Мишка в Твиттере</span>
-              <svg width="21.769" height="21.334">
+              <svg width="23.494" height="20.168">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"/>
               </svg>
             </a>
@@ -192,6 +192,6 @@
         </a>
       </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/script_min.js"></script>
   </body>
 </html>
