--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
     <header class="page-header">
       <nav class="main-nav main-nav--mobile-closed main-nav--mobile-nojs">
         <a href="index.html" class="main-nav__logo">
-          <picture class="logo__image">
+          <picture>
             <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
             <img src="img/logo-mobile.svg" alt="Логотип Мишка">
@@ -32,10 +32,10 @@
         </ul>
         <ul class="main-nav__list main-nav__list--user">
           <li class="main-nav__item main-nav__item--search"><a href="#" class="main-nav__link main-nav__link--search">
-            <svg class="main-nav__link--svg" width="18" height="18"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"/></svg>Поиск по сайту</a>
+            <svg class="main-nav main-nav__link main-nav__link--svg" width="18" height="18"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"/></svg>Поиск по сайту</a>
           </li>
           <li class="main-nav__item main-nav__item--basket"><a href="#" class="main-nav__link main-nav__link--basket">
-            <svg class="main-nav__link--svg" width="18" height="18"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-cart"/></svg>Корзина: пока пуста</a>
+            <svg class="main-nav main-nav__link main-nav__link--svg" width="18" height="18"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-cart"/></svg>Корзина: пока пуста</a>
           </li>
         </ul>
         <ul class="main-nav__list main-nav__list--promo">
@@ -55,12 +55,12 @@
           <ul class="proposals__list">
             <li>
               <a href="#" class="proposals__link proposals__link--interior">
-                <svg width="60" height="59.62"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-interior"/></svg><span class="proposals__link--text">Предметы интерьера</span>
+                <svg width="60" height="59.62"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-interior"/></svg><span class="proposals proposals__link proposals__link--text">Предметы интерьера</span>
               </a>
             </li>
             <li>
               <a href="#" class="proposals__link proposals__link--toys">
-                <svg width="60" height="59.62"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-toy"/></svg><span class="proposals__link--text">Детские игрушки</span>
+                <svg width="60" height="59.62"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-toy"/></svg><span class="proposals proposals__link proposals__link--text">Детские игрушки</span>
               </a>
             </li>
           </ul>
@@ -125,9 +125,9 @@
                 <a href="#" class="reviews__link">@misssssiskras</a>
               </li>
             </ul>
-            <div class="reviews__slider--control">
-              <button type="button" class="btn__slider btn__slider--back"><span class=" visually-hidden">Назад</span></button>
-              <button type="button" class="btn__slider btn__slider--frwd"><span class=" visually-hidden">Вперед</span></button>
+            <div class="reviews reviews__slider reviews__slider--control">
+              <button type="button" class="btn btn__slider btn__slider--back"><span class=" visually-hidden">Назад</span></button>
+              <button type="button" class="btn btn__slider btn__slider--frwd"><span class=" visually-hidden">Вперед</span></button>
             </div>
           </div>
           <a href="#" class="btn btn--white reviews__btn">Написать</a>
@@ -137,22 +137,22 @@
         <div class="container">
           <h3 class="heading heading--tertialy contacts__heading">Контакты</h3>
           <address class="contacts__list">
-            <div class="contacts__item"><span class="contacts__item--title">e-mail:</span>
-              <a class="contacts__item--e-mail" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+            <div class="contacts__item"><span class="contacts contacts__item contacts__item--title">e-mail:</span>
+              <a class="contacts contacts__item contacts__item--e-mail" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
             </div>
-            <div class="contacts__item"><span class="contacts__item--title">адрес:</span>
-              <span class="contacts__item--address"> г. Санкт-Петербург, ул.&nbsp;Большая Конюшенная, д.&nbsp;19/8, офис 101</span>
+            <div class="contacts__item"><span class="contacts contacts__item contacts__item--title">адрес:</span>
+              <span class="contacts contacts__item contacts__item--address"> г. Санкт-Петербург, ул.&nbsp;Большая Конюшенная, д.&nbsp;19/8, офис 101</span>
             </div>
           </address>
         </div>
         <div class="contacts__map" id="contactsMap">
-          <picture class="cantacts__picture-map--safe">
+          <picture>
             <source type="image/webp" media="(min-width: 1150px)" srcset="img/map-desktop@1x.webp 1x, img/map-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)" srcset="img/map-tablet@1x.webp 1x, img/map-tablet@2x.webp 2x">
             <source type="image/webp" srcset="img/map-mobile@1x.webp, img/map-mobile@2x.webp 2x">
             <source media="(min-width: 1150px)" srcset="img/map-desktop@1x.jpg 1x, img/map-desktop@2x.jpg 2x ">
             <source media="(min-width: 768px)" srcset="img/map-tablet@1x.jpg, img/map-tablet@2x.jpg 2x">
-            <img class="cantacts__picture-img" src="img/map-mobile@1x.jpg" srcset="img/map-mobile@2x.jpg 2x" height="457" alt="Карта - Магазин Мишка">
+            <img src="img/map-mobile@1x.jpg" srcset="img/map-mobile@2x.jpg 2x" height="457" alt="Карта - Магазин Мишка">
           </picture>
         </div>
         <div class="contacts__container">
