--- a/source/form.html
+++ b/source/form.html
@@ -51,9 +51,7 @@
       </div>
       <section class="form">
         <div class="form__container">
-          <p class="form__text">
-          Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
-        </p>
+          <p class="form__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
         </div>
         <form class="form" action="https://echo.htmlacademy.ru/" method="post">
           <span class="visually-hidden">Форма заказа</span>
@@ -103,16 +101,16 @@
           </div>
           <div class="form__fieldset form__fieldset--text">
             <h2 class="form__legend form__legend--text">ФИО</h2>
-            <ul class="form form__text form__text--list">
-              <li class="form form__contacts form__contacts--item">
+            <ul class="form__initials">
+              <li class="form__contacts form__contacts--item">
                 <label class="form__label form__label--text" for="fname">Имя:</label>
                 <input class="form__control form__control--text" id="fname" type="text" name="fname" placeholder="Введите ваше имя*" required/>
               </li>
-              <li class="form form__contacts form__contacts--item">
+              <li class="form__contacts form__contacts--item">
                 <label class="form__label form__label--text" for="lname">Фамилия:</label>
                 <input class="form__control form__control--text" id="lname" type="text" name="lname" placeholder="Укажите фамилию*" required/>
               </li>
-              <li class="form form__contacts form__contacts--item">
+              <li class="form__contacts form__contacts--item">
                 <label class="form__label form__label--text" for="mname">Отчество:</label>
                 <input class="form__control form__control--text" id="mname" type="text" name="mname" placeholder="Отчество, если желаете"/>
               </li>
@@ -123,7 +121,7 @@
               <h2 class="form__field form__field--tel">Тел</h2>
               <label class="form__label form__label--tel" for="tel"></label>
               <input class="form__control form__control--tel" id="tel" type="tel" name="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required/>
-              <svg class="form form__control form__control--phone-svg" width="24.829" height="24.333">
+              <svg class="form__phone-svg" width="24.829" height="24.333">
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-phone"/>
               </svg>
             </div>
@@ -133,7 +131,7 @@
               <h2 class="form__field form__field--email">E-mail</h2>
               <label class="form__label form__label--email" for="email"></label>
               <input class="form__control form__control--email" id="email" type="email" name="email" placeholder="Ваш Email*" required/>
-              <svg class="form form__control form__control--mail-svg" width="32" height="32">
+              <svg class="form__mail-svg" width="32" height="32">
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-mail"/>
               </svg>
             </div>
@@ -142,7 +140,7 @@
             <div class="form__textarea">
               <h2 class="form__field form__field--textarea">Доп</h2>
               <label class="form__label form__label--textarea" for="add"></label>
-              <textarea class="form form__textarea form__textarea--text" id="add" name="add" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+              <textarea class="form__textarea form__textarea--text" id="add" name="add" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </div>
           </div>
           <div class="form__filling">
@@ -156,7 +154,6 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__container">
-        <h3 class="heading heading--tertialy"><span class="visually-hidden">Социальные сети</span></h3>
         <a href="#" class="page-footer__logo">
           <svg width="101.615" height="34.056" aria-label="Логотип - Магазин Мишка"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-footer"/>
           </svg>
