--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
       <include src="build/img/sprite/sprite.svg"></include>
     </div>
     <header class="page-header">
-      <nav class="main-nav main-nav--mobile-closed main-nav--mobile-nojs">
+      <nav class="main-nav main-nav--mobile-closed main-nav-nojs">
         <a href="index.html" class="main-nav__logo">
           <picture>
             <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
@@ -55,25 +55,25 @@
           <ul class="proposals__list">
             <li>
               <a href="#" class="proposals__link proposals__link--interior">
-                <svg width="60" height="59.62"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-interior"/></svg><span class="proposals proposals__link proposals__link--text">Предметы интерьера</span>
+                <svg width="60" height="59.62"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-interior"/></svg><span class="proposals__text">Предметы интерьера</span>
               </a>
             </li>
             <li>
               <a href="#" class="proposals__link proposals__link--toys">
-                <svg width="60" height="59.62"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-toy"/></svg><span class="proposals proposals__link proposals__link--text">Детские игрушки</span>
+                <svg width="60" height="59.62"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-toy"/></svg><span class="proposals__text">Детские игрушки</span>
               </a>
             </li>
           </ul>
         </section>
       </div>
-        <div class="container">
-          <section class="favorites">
-            <div class="favorites__title">
+      <div class="container">
+        <section class="favorites">
+          <div class="favorites__title">
             <h2 class="heading heading--secondary favorites__heading">Вязаные корзинки</h2>
             <span class="favorites__moto">Товар Недели</span>
-            </div>
-            <div class="favorites__text">
-              <p class="favorites__discription">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+          </div>
+          <div class="favorites__text">
+            <p class="favorites__discription">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
             <table class="favorites__spec">
               <tr>
                 <td class="favorites__value">Цвет:</td>
@@ -88,32 +88,32 @@
                 <td class="favorites__field">15 см.</td>
               </tr>
             </table>
-            </div>
-            <div class="favorites__pic">
-              <picture class="favorites__picture">
-                <source type="image/webp" media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/triple-set-mobile@1x.webp 1x, img/triple-set-mobile@2x.webp 2x">
-                <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
-                <img class="favorites__pic-img" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Товар Недели">
-              </picture>
-            </div>
-            <span class="favorites__price">Цена: 990 руб.</span>
-            <a href="favorites-modal.html" class="btn btn--white favorites__btn modal-btn">Заказать</a>
-          </section>
-          <section class="about">
-            <h2 class="heading heading--secondary">Коротко о нас:</h2>
-              <ul class="about__list">
-                <li class="about__item about__item--eco">Экологически чистые&nbsp;материалы</li>
-                <li class="about__item about__item--style">Скандинавский стиль по&nbsp;российской цене</li>
-                <li class="about__item about__item--like">Увеличивает лайки на&nbsp;фотографиях</li>
-                <li class="about__item about__item--handmade">Связано вручную с любовью и умилением</li>
-                <li class="about__item about__item--local">Поддержка отечественного производителя</li>
-                <li class="about__item about__item--gift">Поставляется в подарочной упаковке</li>
-              </ul>
-          </section>
-        </div>
+          </div>
+          <div class="favorites__pic">
+            <picture class="favorites__picture">
+              <source type="image/webp" media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/triple-set-mobile@1x.webp 1x, img/triple-set-mobile@2x.webp 2x">
+              <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
+              <img class="favorites__pic-img" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Товар Недели">
+            </picture>
+          </div>
+          <span class="favorites__price">Цена: 990 руб.</span>
+          <a href="favorites-modal.html" class="btn btn--white favorites__btn btn-js">Заказать</a>
+        </section>
+        <section class="about">
+          <h2 class="heading heading--secondary">Коротко о нас:</h2>
+          <ul class="about__list">
+            <li class="about__item about__item--eco">Экологически чистые&nbsp;материалы</li>
+            <li class="about__item about__item--style">Скандинавский стиль по&nbsp;российской цене</li>
+            <li class="about__item about__item--like">Увеличивает лайки на&nbsp;фотографиях</li>
+            <li class="about__item about__item--handmade">Связано вручную с любовью и умилением</li>
+            <li class="about__item about__item--local">Поддержка отечественного производителя</li>
+            <li class="about__item about__item--gift">Поставляется в подарочной упаковке</li>
+          </ul>
+        </section>
+      </div>
       <section class="reviews">
         <div class="reviews__body">
           <h2 class="heading heading--secondary reviews__heading">Отзывы</h2>
@@ -125,23 +125,23 @@
                 <a href="#" class="reviews__link">@misssssiskras</a>
               </li>
             </ul>
-            <div class="reviews reviews__slider reviews__slider--control">
+            <div class="slider-control">
               <button type="button" class="btn btn__slider btn__slider--back"><span class=" visually-hidden">Назад</span></button>
               <button type="button" class="btn btn__slider btn__slider--frwd"><span class=" visually-hidden">Вперед</span></button>
             </div>
           </div>
-          <a href="#" class="btn btn--white reviews__btn">Написать</a>
+          <a href="review.html" class="btn btn--white reviews__btn">Написать</a>
         </div>
       </section>
       <section class="contacts">
-        <div class="container">
+        <div class="container contacts__flag ">
           <h3 class="heading heading--tertialy contacts__heading">Контакты</h3>
           <address class="contacts__list">
-            <div class="contacts__item"><span class="contacts contacts__item contacts__item--title">e-mail:</span>
-              <a class="contacts contacts__item contacts__item--e-mail" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+            <div class="contacts__item"><span class="contacts__title">e-mail:</span>
+              <a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
             </div>
-            <div class="contacts__item"><span class="contacts contacts__item contacts__item--title">адрес:</span>
-              <span class="contacts contacts__item contacts__item--address"> г. Санкт-Петербург, ул.&nbsp;Большая Конюшенная, д.&nbsp;19/8, офис 101</span>
+            <div class="contacts__item"><span class="contacts__title">адрес:</span>
+              <span class="contacts__address"> г. Санкт-Петербург, ул.&nbsp;Большая Конюшенная, д.&nbsp;19/8, офис 101</span>
             </div>
           </address>
         </div>
@@ -156,13 +156,12 @@
           </picture>
         </div>
         <div class="contacts__container">
-          <a href="#" class="btn btn--white contacts__btn">Напишите нам</a>
+          <a href="info.html" class="btn btn--white contacts__btn">Напишите нам</a>
         </div>
       </section>
     </main>
     <footer class="page-footer">
       <div class="page-footer__container">
-        <h3 class="heading heading--tertialy"><span class="visually-hidden">Социальные сети</span></h3>
         <a href="#" class="page-footer__logo">
           <svg width="101.615" height="34.056" aria-label="Логотип - Магазин Мишка"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-footer"/>
           </svg>
@@ -188,7 +187,7 @@
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"/>
               </svg>
             </a>
-            </li>
+          </li>
         </ul>
         <a class="copyright" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="copyright__text">Разработано</span>
@@ -198,9 +197,9 @@
         </a>
       </div>
     </footer>
-    <section class="modal">
-      <h2 class="heading heading--secondary modal__heading">Добавить в корзину</h2>
-      <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
+    <section class="modal-form">
+      <h2 class="heading heading--secondary modal-form__heading">Добавить в корзину</h2>
+      <form class="modal-form__action" action="https://echo.htmlacademy.ru" method="post">
         <div class="modal-form__fieldset">
           <span class="modal-form__legend">Выберите размер:</span>
           <ul class="modal-form__list">
@@ -221,9 +220,8 @@
         <button class="btn btn--blue modal-form__btn" type="submit">Добавить</button>
       </form>
     </section>
-    <div class="overlay"><div>
+    <div class="overlay"></div>
     <script src="js/script_min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbw-qZjTa5GnNd7evi9RmFp9smFRrnMss&callback=initMap"
-    async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbw-qZjTa5GnNd7evi9RmFp9smFRrnMss&callback=initMap" async defer></script>
   </body>
 </html>
