--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=yes"/>
     <title>HTML Academy: Мишка | Учебный проект </title>
-    <link rel="stylesheet" href="css/style_min.css">
+    <link rel="stylesheet" href="css/style_mini.css">
     <link rel="preload" href="fonts/opensans.woff" as="font" crossorigin>
     <link rel="preload" href="fonts/opensans.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/opensansbold.woff2" as="font" type="font/woff2" crossorigin>
@@ -17,7 +17,7 @@
       <include src="build/img/sprite/sprite.svg"></include>
     </div>
     <header class="page-header">
-      <nav class="main-nav main-nav--mobile-closed main-nav-nojs">
+      <nav class="main-nav main-nav--mobile-closed main-nav--mobile-nojs">
         <a href="index.html" class="main-nav__logo">
           <picture>
             <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
@@ -45,7 +45,7 @@
         <span class="main-nav__delivery">Бесплатная доставка по России</span>
       </nav>
     </header>
-    <main class="page-main">
+    <main>
       <div class="page-top page-top--index">
         <div class="page-top__heading">
           <h1 class="heading heading--primary">Милые штуки ручной работы&nbsp;для&nbsp;дома</h1>
@@ -125,7 +125,7 @@
                 <a href="#" class="reviews__link">@misssssiskras</a>
               </li>
             </ul>
-            <div class="slider-control">
+            <div class="reviews__slider-control">
               <button type="button" class="btn btn__slider btn__slider--back"><span class=" visually-hidden">Назад</span></button>
               <button type="button" class="btn btn__slider btn__slider--frwd"><span class=" visually-hidden">Вперед</span></button>
             </div>
