--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=yes"/>
     <title>HTML Academy: Мишка | Учебный проект </title>
-    <link rel="stylesheet" href="css/style_min.css">
+    <link rel="stylesheet" href="css/style_mini.css">
     <link rel="preload" href="fonts/opensans.woff" as="font" crossorigin>
     <link rel="preload" href="fonts/opensans.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/opensansbold.woff2" as="font" type="font/woff2" crossorigin>
@@ -32,10 +32,10 @@
         </ul>
         <ul class="main-nav__list main-nav__list--user">
           <li class="main-nav__item main-nav__item--search"><a href="#" class="main-nav__link main-nav__link--search">
-            <svg class="main-nav main-nav__link main-nav__link--svg" width="17.6" height="17.6"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"/></svg>Поиск по сайту</a>
+            <svg class="main-nav main-nav__link main-nav__link--svg" width="18" height="18"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"/></svg>Поиск по сайту</a>
           </li>
           <li class="main-nav__item main-nav__item--basket"><a href="#" class="main-nav__link main-nav__link--basket">
-            <svg class="main-nav main-nav__link main-nav__link--svg" width="17.6" height="17.6"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-cart"/></svg>Корзина: пока пуста</a>
+            <svg class="main-nav main-nav__link main-nav__link--svg" width="18" height="18"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-cart"/></svg>Корзина: пока пуста</a>
           </li>
         </ul>
         <ul class="main-nav__list main-nav__list--promo">
@@ -71,7 +71,7 @@
                 <div class="product-card__buy">
                   <span class="product-card__price">1 200 руб.</span>
                   <a href="basket.html" class="product-card__basket btn-js"><span class="visually-hidden">Положить в корзину</span>
-                      <svg width="17.6" height="17.6">
+                      <svg width="18" height="18">
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-cart"/>
                     </svg>
                   </a>
@@ -99,7 +99,7 @@
                   <div class="product-card__buy">
                     <span class="product-card__price">690 руб.</span>
                     <a href="basket.html" class="product-card__basket btn-js"><span class="visually-hidden">Положить в корзину</span>
-                      <svg width="17.6" height="17.6">
+                      <svg width="18" height="18">
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-cart"/>
                       </svg>
                     </a>
@@ -127,7 +127,7 @@
                 <div class="product-card__buy">
                   <span class="product-card__price">1 500 руб.</span>
                   <a href="basket.html" class="product-card__basket btn-js"><span class="visually-hidden">Положить в корзину</span>
-                    <svg width="17.6" height="17.6" >
+                    <svg width="18" height="18" >
                       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-cart"/>
                     </svg>
                   </a>
