--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=yes"/>
     <title>HTML Academy: Мишка | Учебный проект </title>
-    <link rel="stylesheet" href="css/style_min.css">
+    <link rel="stylesheet" href="css/style_mini.css">
     <link rel="preload" href="fonts/opensans.woff" as="font" crossorigin>
     <link rel="preload" href="fonts/opensans.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/opensansbold.woff2" as="font" type="font/woff2" crossorigin>
